--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<psk-slideshow images=" /assets/slider/PrivateSky.png, /assets/slider/Hierarhical.png, /assets/slider/Domains.png, /assets/slider/EDFS.png, /assets/slider/DataFlow.png,/assets/slider/Governance.png,/assets/slider/Deployment.png, /assets/slider/SSApps.png, /assets/slider/SSAppsDiagram.png, /assets/slider/Architecture.png"
+<psk-slideshow images=" /assets/slider/wordcloud1.svg, /assets/slider/wordcloud2.svg, /assets/slider/wordcloud3.svg, /assets/slider/wordcloud4.svg"
                title="PrivateSky Platform: Integration, Executable Choreographies, Create new Blockchain Domains, Self Sovereign Applications as DApps using Web Components and Service Workers"
                caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. Cardinal:MVC light framework for building web applications"
 >
