--- a/pages/Tools/pskdomain.html
+++ b/pages/Tools/pskdomain.html
@@ -58,34 +58,19 @@
     <psk-chapter title="Concept definitions">
         <psk-table>
             <b>Concept</b> | <b>Description</b>
-            BAR | An archive that stores files that were
-            | previously divided into blocks called bricks.
-            | A BAR is referenced by its SEED. The SEED
-            | could be also used to encrypt the archive.
-            |
-            |
+            BAR | An archive that stores files that were previously divided into blocks called bricks. A BAR is referenced by its SEED. The SEED could be also used to encrypt the archive.
+
             CSB | An encrypted BAR that contains a blockchain.
-            |
-            |
-            SEED | A string used to derive the encryption keys for
-            | BARs. It is also used for referencing BARs.
-            |
-            |
-            SEED Cage | A dictionary that stores domainAliases and
-            | SEEDs.
-            |
-            |
-            PIN | A string used to derive the key used for the
-            | SEED Cage encryption.
-            |
-            |
-            Domain | A domain is a CSB that stores domain
-            | constitutions.
-            |
-            |
-            Domain Constitution | A list of files that contain assets and
-            | transactions used for the manipulation of a
-            | domain’s blockchain.
+
+            SEED | A string used to derive the encryption keys for  BARs. It is also used for referencing BARs.
+
+            SEED Cage | A dictionary that stores domainAliases and SEEDs.
+
+            PIN | A string used to derive the key used for the SEED Cage encryption.
+
+            Domain | A domain is a CSB that stores domain constitutions.
+
+            Domain Constitution | A list of files that contain assets and transactions used for the manipulation of a domain’s blockchain.
 
         </psk-table>
     </psk-chapter>
