--- a/pages/PrivateSky/main-innovations.html
+++ b/pages/PrivateSky/main-innovations.html
@@ -1,9 +1,39 @@
 <psk-page title="PrivateSky Innovations">
-    <psk-chapter title="Innovative Blockchain Arhitecture">
-      A short presentation of blockchain arhitectures proposed by privateSky can be found here:  <psk-link page="PrivateSky/Architecture" > Architecture for Blockchain</psk-link>
+    <psk-toc></psk-toc>
+
+  <psk-chapter title="Swarm Communication ">
+
+    <psk-chapter title="Explortion of the swarm communication">
+      <psk-link page="PrivateSky/swarms-explained">Swarm communication explained </psk-link>
     </psk-chapter>
 
-  <psk-chapter title="EDFS sub-project">
+    <psk-chapter title="Encrypted Choregraphies security model">
+      Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general.
+      <psk-link page="Development/encrypted-choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </psk-link>
+    </psk-chapter>
+
+  </psk-chapter>
+
+
+  <psk-chapter title="Innovative Blockchain Arhitecture">
+      A short presentation of blockchain architectures proposed by PrivateSky can be found here:  <psk-link page="PrivateSky/Architecture" > Architecture for Blockchain</psk-link>
+
+      <psk-chapter title="Asset & transaction model">
+        Documentation about the assets/transactions model is described  <psk-link page="PrivateSky/transactions" > here</psk-link>
+      </psk-chapter>
+
+
+      <psk-chapter title="OBFT consensus algorithm">
+        OBFT consensus algorithm will be described <psk-link page="PrivateSky/obft" > here</psk-link>.
+      </psk-chapter>
+
+
+      <psk-chapter title="Anchored consensus algorithm">
+        Anchored consensus algorithm will be described OBFT consensus algorithm will be described <psk-link page="PrivateSky/csb consensus" > here</psk-link>.
+      </psk-chapter>
+    </psk-chapter>
+
+  <psk-chapter title="EDFS subproject">
     <psk-img src="/pages/PrivateSky/EDFS.png" title="Relation between the EDFS major concepts"></psk-img>
 
      PrivateSky efforts to offer to create a database for storing private data conducted us to propose the  EDFS (Encrypted Distributed File System) that is both a file system and a blockchain based distributed database.
@@ -71,7 +101,7 @@
       Embedded Web Applications are implemented without any servers (service workers)
       </div>
       <div>
-      In a sense a CSB is a sidechain but not a usual one.       A CSB it is not a permanently online blockchain (Sidechain). We call it as an offline Sidechain.
+      In a sense a CSB is a sidechain but not a usual one.    A CSB it is not a permanently online blockchain (Sidechain). We call it as an offline Sidechain.
       It is a new breed of blockchain: offline blockchains.  There are no online P2P nodes communicating between them all the time. We have only an “Indirect communication” by anchoring the new HASH of
       the BAR (A CSB is a BAR) in a blockchain and by adding new Bricks in the cloud storages.
       </div>
@@ -119,26 +149,8 @@
   </psk-chapter>
 
 
-
-  <psk-chapter title="Other significant innovations">
-
-    <psk-chapter title="Asset/transaction model">
-      Documentation about the assets/transactions model will be here
-    </psk-chapter>
-
-    <psk-chapter title="Encrypted Choregraphies security model">
-      Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general. <psk-link page="Development/encrypted-choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </psk-link>
-    </psk-chapter>
-
-    <psk-chapter title="OBFT consensus algorithm">
-       OBFT consensus algorithm will be described here.
-    </psk-chapter>
-
-
-    <psk-chapter title="Anchored consensus algorithm">
-      Anchored consensus algorithm will be described here.
-    </psk-chapter>
-
+  <psk-chapter title="CardinalJs subproject">
+    CardinalJs appeared as a method of programming the Ui of teh Self Sovereign Applications. Details can be found <psk-link page="Cardinal/web-components-mvc">here </psk-link>
   </psk-chapter>
 
 
