--- a/pages/PrivateSky/main-innovations.html
+++ b/pages/PrivateSky/main-innovations.html
@@ -3,19 +3,25 @@
 
   <psk-chapter title="Swarm Communication ">
 
-    <psk-chapter title="Explortion of the swarm communication">
+    <psk-chapter title="Exploration of the swarm communication and verifiable choreographies">
       <psk-link page="PrivateSky/swarms-explained">Swarm communication explained </psk-link>
     </psk-chapter>
 
     <psk-chapter title="Encrypted Choregraphies security model">
       Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general.
-      <psk-link page="Development/encrypted-choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </psk-link>
+      <psk-link page="Development/encrypted-choreographies">Description of the Encrypted Choregraphies </psk-link>
+    </psk-chapter>
+
+    <psk-chapter title="Serverless Choregraphies ">
+      Under the concept of "Serverless Choregraphies" we propose a general model for running executable choreographies in a "choreography as a service" model.
+      We use this model also fo execution of the blockchain transactions.
+      <psk-link page="Development/encrypted-choreographies">Description of the Serverless Choregraphies </psk-link>
     </psk-chapter>
 
   </psk-chapter>
 
 
-  <psk-chapter title="Innovative Blockchain Arhitecture">
+  <psk-chapter title="Hierarchical Blockchain Arhitecture">
       A short presentation of blockchain architectures proposed by PrivateSky can be found here:  <psk-link page="PrivateSky/Architecture" > Architecture for Blockchain</psk-link>
 
       <psk-chapter title="Asset & transaction model">
