--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,6 @@
-<psk-slideshow images=" /assets/slider/wordcloud1.svg, /assets/slider/wordcloud2.svg, /assets/slider/wordcloud3.svg, /assets/slider/wordcloud4.svg"
-               title="PrivateSky Platform: Integration, Executable Choreographies, Create new Blockchain Domains, Self Sovereign Applications as DApps using Web Components and Service Workers"
-               caption="Enabling blockchain for node.js programmers. Framework to create privacy conscious cloud applications and powerful integrations. Cardinal:MVC light framework for building web applications"
+<psk-slideshow images=" /assets/slider/wordcloud3.svg, /assets/slider/wordcloud4.svg, /assets/slider/wordcloud1.svg, /assets/slider/wordcloud2.svg"
+               title="Create privacy conscious cloud applications and blockchains. "
+               caption="PrivateSky Platform: Integration, Executable Choreographies, Hierarchical  Blockchain Domains, Self Sovereign Applications as DApps, Microservices "
 >
 
     <psk-button onclick="window.location.href='?PrivateSky/why&chapter=why' " label="Why?"></psk-button>
