--- a/pages/PrivateSky/swarms-explained.html
+++ b/pages/PrivateSky/swarms-explained.html
@@ -1,6 +1,6 @@
 <psk-page title="What is swarm communication?">
 
-  <psk-tok></psk-tok>
+  <psk-toc></psk-toc>
 
 <psk-chapter title="Abstract ">
    <p align="justify">Swarm communication is proposed as a generalisation of object oriented programing. Instead of building software with objects, programming with swarms encourages the programmer to think in terms of processes (called swarms). An object is a concept obtained from the description of data and methods of data change. A swarm is seen as a concept obtained by  describing data, methods but also the locations where the groups of related objects are instantiated. A location is typically a security context, that is, an  environment for instantiating objects belonging to a swarm of objects that is subject to certain security constraints. The concept of swarm also proposes a new way of looking at  the concept of "identity" through the possibility of constructing a single concept from complex behaviors of a multitude of objects. </p>
