--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -58,7 +58,7 @@
         </psk-example>
         <psk-code>
             <psk-table head="true" footer="true">
-                Author | Song | Published Year | 
+                Author | Song | Published Year 
                  | I want to break free | 1984
                 Queen |  I want it all | 1989
                  | The show must go an | 1991
@@ -69,7 +69,7 @@
         </psk-code>
         <psk-example title="Rowspan Example">
             <psk-table head="true" footer="true">
-                Author | Song | Published Year | 
+                Author | Song | Published Year  
                  | I want to break free | 1984
                 Queen |  I want it all | 1989
                  | The show must go an | 1991
