updated documentation + css repair

--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -8,7 +8,7 @@
             properties.</p>
         <p>The columns will be delimited by the special character <b>|</b>( <code>pipe</code>) ( Example: <b>Title |
                 Author | Published Year</b> )</p>
-        <p>The lines will be delimited by the <code>new line</code> character .</p>
+        <p>The lines will be delimited by the <code>enter</code> character .</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
