--- a/pages/web-components/icon.html
+++ b/pages/web-components/icon.html
@@ -21,10 +21,10 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-icon icon="user" disableColor="true" color="rgb(208, 31, 208)">
+            <psk-icon icon="user" disable-color="true" color="rgb(208, 31, 208)">
             </psk-icon>
         </psk-code>
-        <psk-icon icon="user" disableColor="true" color="rgb(208, 31, 208)">
+        <psk-icon icon="user" disable-color="true" color="rgb(208, 31, 208)">
         </psk-icon>
 
         <psk-code>
@@ -41,10 +41,10 @@
         </psk-icon>
 
         <psk-code>
-            <psk-icon icon="amazon" disableColor="true" color="rgb(52, 147, 235)">
+            <psk-icon icon="amazon" disable-color="true" color="rgb(52, 147, 235)">
             </psk-icon>
         </psk-code>
-        <psk-icon icon="amazon" disableColor="true" color="rgb(52, 147, 235)">
+        <psk-icon icon="amazon" disable-color="true" color="rgb(52, 147, 235)">
         </psk-icon>
 
     </psk-chapter>
