--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PrivateSky Development Hub</title>
     <meta name="Description" content="PrivateSky:PrivateSky: A bridge between blockchains and cloud or enterprise software">
     <meta name="google-site-verification" content="LyhlF9GagOo7ZqqlC8Ne1nqqpkRLrxiq9qAeuUO4gwk" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/privatesky.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/manifest.json">
