example fix for mobile

--- a/pages/web-components/app-menu.html
+++ b/pages/web-components/app-menu.html
@@ -176,7 +176,7 @@
                 })
         </script>
         <header style="background: #005cbf;">
-            <app-menu>
+            <app-menu hamburger-max-width="0">
             </app-menu>
         </header>
     </psk-container>
