--- a/pages/EDFS/cloud-safe-boxes.html
+++ b/pages/EDFS/cloud-safe-boxes.html
@@ -1,5 +1,6 @@
-<psk-page title="Page not available yet">
-  <psk-chapter title="Not available">
-    Page still not available. Wait until our team will complete this! If you believe that this is an error or you want to contribute, write an email to sinica@axiologic.net
+<psk-page title="Cloud Safe Boxes">
+  <psk-chapter>
+    <p align="justify">A CSB is a BAR containing a blockchain and optionally a folder with the code of a SSApp. Any CSB is associated to the code of a Blockchain Constitution. We mean by Constitution a collection of swarm definitions, assets and transactions. Any modification of the CSB embedded blockchain content must be operated only using the Constitution code.</p>
+    <p align="justify">The Constitution is encapsulated in a BAR that is, at its turn, anchored to the CSB blockchain. The Constitution may allow or deny the constitution's update. Some CSB are not allowing modifications of the constitution.</p>
   </psk-chapter>
 </psk-page>
