--- a/pages/EDFS/edfs.html
+++ b/pages/EDFS/edfs.html
@@ -42,8 +42,8 @@ In order to retrieve the initial content of a BAR, it is required in EDFS to sav
 
 <p align="justify">The BAR (or CSB) identification using SEED enables:</p>
 <ul>
-<il>Saving and recovering encrypted data in cloud with ease</il>
-<il>Very fast BAR archives sharing between the users. The speed is due to the fact that only the SEED must be shared, not the entire BAR content</il>
+<il>• Saving and recovering encrypted data in cloud with ease</il>
+<il>• Very fast BAR archives sharing between the users. The speed is due to the fact that only the SEED must be shared, not the entire BAR content</il>
 </ul>
 
 </psk-chapter>
