--- a/pages/Development/node-modules.html
+++ b/pages/Development/node-modules.html
@@ -6,8 +6,7 @@
     	<b>Module</b> | <b>Purpose</b>
     	<a href="https://github.com/PrivateSky/privatesky">privatesky</a> | This is the start repository for the PrivateSky developers (core team and external contributors)
     	<a href="https://github.com/PrivateSky/psk-release">psk-release</a> | The privatesky repository is packed with browserify and PrivateSky specific building tools to create periodic  releases. The releases are aimed  to make easier for third party companies  to develop PrivateSky blockchain domains, CSB constitutions and cloud applications (backends).
-    	<a href="https://github.com/PrivateSky/blockchain">blockchain</a> | This module contains the PrivateSky blockchain implementation, the OBFT consensus algorithm and various strategies for storing blocks and blockchain world state. 
-This module contains also the implementation of assets or transactions  (types of swarm communication)  used by smart contracts and by the  secret smart contracts.
+    	<a href="https://github.com/PrivateSky/blockchain">blockchain</a> | This module contains the PrivateSky blockchain implementation, the OBFT consensus algorithm and various strategies for storing blocks and blockchain world state. This module contains also the implementation of assets or transactions  (types of swarm communication)  used by smart contracts and by the  secret smart contracts.
 		<a href="https://github.com/PrivateSky/swarm-engine">swarm-engine</a> | This module contains the implementation of choreographies (swarm) and of the interaction type of swarm.
 		<a href="https://github.com/PrivateSky/callflow">callflow</a> | This module constitute the base for PrivateSky implementation of the swarm communication programming paradigm.
 		<a href="https://github.com/PrivateSky/overwrite-require">overwrite-require</a> | Utility module that should be loaded first in the PrivateSky ecosistem.
