--- a/pages/Cardinal/web-components-mvc.html
+++ b/pages/Cardinal/web-components-mvc.html
@@ -1,4 +1,6 @@
 <psk-page title="CardinalJS a web components MVC framework">
+	<psk-toc></psk-toc>
+
 <p align="justify">CardinalIJS (or sometimes simply Cardinal) is introducing a programming mode (it is a micro framework) oriented to enable the rapid development of WEB applications (RAD - Rapid Application Development or low code development). Cardinal appeared because of the frustration experienced with other frameworks and it aims at providing a guide  for fast and safe programming of SSApp graphic interface.</p>
 
 <psk-chapter title="We bet on Web Components">
