--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -22,7 +22,7 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
                 Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
@@ -31,7 +31,7 @@
         </psk-code>
 
         <psk-example title="Full table Example">
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
                 Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
@@ -40,7 +40,7 @@
         </psk-example>
 
         <psk-code>
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Title | | | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | | 416
                 Maggie Brown & Others: Stories | Peter Orner | | 336
@@ -49,7 +49,7 @@
         </psk-code>
 
         <psk-example title="Empty spaces table Example">
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Title | | | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | | 416
                 Maggie Brown & Others: Stories | Peter Orner | | 336
@@ -57,7 +57,7 @@
             </psk-table>
         </psk-example>
         <psk-code>
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Author | Song | Published Year 
                  | I want to break free | 1984
                 Queen |  I want it all | 1989
@@ -68,7 +68,7 @@
             </psk-table>
         </psk-code>
         <psk-example title="Rowspan Example">
-            <psk-table head="true" footer="true">
+            <psk-table header="true" footer="true">
                 Author | Song | Published Year  
                  | I want to break free | 1984
                 Queen |  I want it all | 1989
