--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -7,10 +7,10 @@
         
     <psk-img src="/pages/PrivateSky/PrivateSky.png"></psk-img>
 
-    <psk-chapter title="Intergration and blockchains using swarm communication and executable choreographies">
+    <psk-chapter title="Integration and blockchains using swarm communication and executable choreographies">
         PrivateSky's open-source platform allows the creation of backend or integration layers (like ESBs - Enterprise Service Buses) for cloud and enterprise application. PrivateSky offers a microservices oriented architecture where the microservices composability
         (orchestration and executable choreographies) is delegated to a "software glue" called swarms (or swarm communication). PrivateSky is also a platform to build decentralized/distributed applications that use blockchain: Distributed Applications
-        - DApps, diverse types of Blockchain Applications, Consortium / Private Distributed Ledgers. The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of
+        - DApps, diverse types of Blockchain Applications, Consortium/Private Distributed Ledgers. The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of
         performant methods of storing and handling private and confidential data. An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default. For a quick understanding of the swarm communication set
         we suggest our article
         <psk-link page="PrivateSky/swarms-explained"> Swarm communication explained</psk-link>
