--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -20,28 +20,26 @@
     <psk-chapter title="EDFS: Near-chain storage">
         The EDFS sub-project announcement and the near-chain concept is presented in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon,
         France. A presentation of the idea can be found here:
-        <psk-link page="PrivateSky/main-innovations">Information about EDFS, BARs, CSBs</psk-link>
+        <psk-link page="PrivateSky/main-innovations">Information about EDFS, BARs, CSBs</psk-link>.
 
     </psk-chapter>
 
     <psk-chapter title="Secret Smart Contracts">
         The first public presentation of the secret smart contract concept is published in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30,
         Toulon, France. A short presentation of the concept can be found here:
-        <psk-link page="PrivateSky/main-innovations">Secret Smart Contracts</psk-link>
+        <psk-link page="PrivateSky/main-innovations">Secret Smart Contracts</psk-link>.
     </psk-chapter>
 
     <psk-chapter title="Self-Sovereign Applications">
 
-        Our preliminary work on Self-Sovereignithy was published in two articles <i>“Private Data System enabling Self-Sovereign Storage managed by Executable Choreographies”</i>, DAIS 2017 - 17th IFIP International Conference on Distributed Applications
-        and Interoperable Systems, Neuchâtel, Switzerland,June 2017 and
-        <i>"Towards a smart society through personal assistants employing executable choreographies" </i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles
-        on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
-        <psk-link page="PrivateSky/main-innovations">Self-Sovereign Applications</psk-link>
+        Our preliminary work on Self-Sovereignithy was published in two articles <i>“Private Data System enabling Self-Sovereign Storage managed by Executable Choreographies”</i>, DAIS 2017 - 17th IFIP International Conference on Distributed Applications and Interoperable Systems, Neuchâtel, Switzerland, June 2017 and
+        <i>"Towards a smart society through personal assistants employing executable choreographies"</i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
+        <psk-link page="PrivateSky/main-innovations">Self-Sovereign Applications</psk-link>.
 
     </psk-chapter>
 
     <psk-chapter title="Replace accounts with assets and transactions">
-        We are working on publishing scientific articles on explaining how blockchain works in priavteSky and our optimised and privacy friendly approach for transaction validation. The preliminary texts can be found here: <psk-link page="PrivateSky/swarms-explained"> Assets and transactions blockchain model</psk-link>
+        We are working on publishing scientific articles on explaining how blockchain works in PriavteSky and our optimised and privacy friendly approach for transaction validation. The preliminary texts can be found here: <psk-link page="PrivateSky/swarms-explained"> Assets and transactions blockchain model</psk-link>.
 
     </psk-chapter>
 
@@ -58,13 +56,13 @@
     <psk-chapter title="Development resources">
 
         <psk-chapter title="PrivateSky Installation">
-            The preliminary texts can be found our wiki: <a href="https://github.com/privatesky/privatesky/wiki"> PrivateSky installation & Stuff</a>
+            The preliminary texts can be found our wiki: <a href="https://github.com/privatesky/privatesky/wiki"> PrivateSky installation & Stuff</a>.
 
         </psk-chapter>
 
         <psk-chapter title="Advanced Technical Details">
             The preliminary texts can be found here:
-            <psk-link page="Development/Advanced"> Advanced Technical Details</psk-link>
+            <psk-link page="Development/Advanced"> Advanced Technical Details</psk-link>.
         </psk-chapter>
     </psk-chapter>
 
