--- a/pages/PrivateSky/main-innovations.html
+++ b/pages/PrivateSky/main-innovations.html
@@ -132,7 +132,7 @@
           Their existence is visible only to a small group of users (because they are embedded in CSBs)
         </li>
         <li>
-          Executed in security contexts: automatically use the secret keys available to the current user(keys stored in CSBs)
+          Executed in security contexts: automatically use the secret keys available to the current user (keys stored in CSBs)
         </li>
         <li>
           Verifiable only by a selected group
@@ -147,7 +147,7 @@
       </div>
 
       We are talking about SSApp as about a Distributed Application (DApp) implemented with tehnologies for Web Applications and in such a way that all its code and data is stored in CSBs.
-      The UI and "server" side part of the SSApp says in CSBs. The execution of SSApp happens without distant servers (there is no external server doing any processing!) but a server is simulated using service workers.
+      The UI and "server" side part of the SSApp stays in CSBs. The execution of SSApp happens without distant servers (there is no external server doing any processing!) but a server is simulated using service workers.
 
     </psk-chapter>
 
