--- a/pages/PrivateSky/architecture.html
+++ b/pages/PrivateSky/architecture.html
@@ -46,7 +46,7 @@
     </psk-description>
     <psk-chapter title="Networking Layer">
 
-      This layer is focused on setting the rules and communication capabilities of the physical nodes doing network communication. For public blockchain (Bitcoin, Ethereum) this layer contains the concerns of P2P communication, node booting, etc. For permissioned DLTs, it reflects concerns regarding restricting access while allowing allows communication to the entities that have permission. For permissioned DLTs this layer could imply the need to configure VPNs, SDNs, Certificate Authorities, etc.
+      This layer is focused on setting the rules and communication capabilities of the physical nodes doing network communication. For public blockchain (Bitcoin, Ethereum) this layer contains the concerns of P2P communication, node booting, etc. For permissioned DLTs, it reflects concerns regarding restricting access while allowing communication to the entities that have permission. For permissioned DLTs this layer could imply the need to configure VPNs, SDNs, Certificate Authorities, etc.
 
     </psk-chapter>
 
