--- a/pages/Development/node-modules.html
+++ b/pages/Development/node-modules.html
@@ -2,8 +2,8 @@
   <psk-chapter>
     This page contains an overview of the major PrivateSky modules (public github repositories) and their purpose.
 
-    <psk-table head="true" footer="true">
-    	<b>Module</b> | <b>Purpose</b>
+    <psk-table header="true">
+    	Module | Purpose
     	<a href="https://github.com/PrivateSky/privatesky">privatesky</a> | This is the start repository for the PrivateSky developers (core team and external contributors)
     	<a href="https://github.com/PrivateSky/psk-release">psk-release</a> | The privatesky repository is packed with browserify and PrivateSky specific building tools to create periodic  releases. The releases are aimed  to make easier for third party companies  to develop PrivateSky blockchain domains, CSB constitutions and cloud applications (backends).
     	<a href="https://github.com/PrivateSky/blockchain">blockchain</a> | This module contains the PrivateSky blockchain implementation, the OBFT consensus algorithm and various strategies for storing blocks and blockchain world state. This module contains also the implementation of assets or transactions  (types of swarm communication)  used by smart contracts and by the  secret smart contracts.
