--- a/pages/Development/annotation-engine.html
+++ b/pages/Development/annotation-engine.html
@@ -6,8 +6,8 @@
   </psk-chapter>
 
   <psk-chapter title="Types of swarms that can benefit from annotations. Approaches.">
-  	<psk-table title = "Types of swarms that can benefit from annotations. Approaches." dimensions="50|50" head="true">
-    	<b>Type</b> | <b>Aspects that can be programmed using AOP with annotations</b>
+  	<psk-table title = "Types of swarms that can benefit from annotations. Approaches." dimensions="50|50" header="true">
+    	Type | Aspects that can be programmed using AOP with annotations
     	flow | checking data types
     	swarm (verifiable choreography) | checking data types
     	encrypted choreography | checking data types
@@ -25,7 +25,7 @@
         |  use in assets
     </psk-table><br>
 
-    <psk-table title = "Use cases of the Annotations identified" dimensions="50|50" head="true">
+    <psk-table title = "Use cases of the Annotations identified" dimensions="50|50" header="true">
     	<b>Use cases</b> | <b>Description</b>
     	value data types | Annotations can be used to type (validate and verify) the properties of swarms. Value type data types are int, number, string, data, JSON
     	embedded object dată types | The initial implementation can be based on the JSON value data type
